# identifiability-toy-study

./: .gitignore  .gitmodules  ANALYSIS_NOTES.md  CITATION.cff  CLAUDE.md  MANIFEST.in  Makefile  NOTICE  README.md  TODO.md  demo_mnist.ipynb  demo_xor.ipynb  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  uncalled_full.txt  uncalled_functions.txt
identifiability_toy_study/: causal_analysis.py  experiment.py  iden_utils.py  parameter_decomposition.py  profiler.py  spd_analysis.py  spd_subcircuits.py  study_core.py  study_utils.py  trial.py  visualization.py
identifiability_toy_study/SubspacePartition/: __init__.py
identifiability_toy_study/SubspacePartition/evaluate/: draw_conflict_fig.py  evaluate.py  evaluate_conflict.py  make_data_greater_than.py  make_data_ioi.py  utils.py
identifiability_toy_study/SubspacePartition/preimage/: app.py  build_index.py  cache_act.py  cache_attribution.py  utils.py
identifiability_toy_study/SubspacePartition/toy-model/: model_analyze.py  model_train.py  train_search_merge.py
identifiability_toy_study/SubspacePartition/training/: data.py  estimate_mi.py  model.py  train_adversarial_disc.py  train_adversarial_recon.py  train_search.py  train_search_split.py  utils.py
identifiability_toy_study/circuit-stability/: README.md  environment.yml  install.sh  utils.py
identifiability_toy_study/circuit-stability/cdatasets/: __init__.py  arith_dataset.py  base.py  bool_dataset.py  csense_dataset.py  date_dataset.py  dyck_dataset.py  movie_dataset.py  prompt_dataaset.py  prompts.py  sports_dataset.py  utils.py
identifiability_toy_study/circuit-stability/eap/: __init__.py  attribute.py  evaluate.py  graph.py  utils.py
identifiability_toy_study/circuit-stability/experiments/: baseline.py  circuit_discovery.py  cross_generate.py  evolution.py  pareto.py  prompting.py  utils.py
identifiability_toy_study/circuit-stability/scripts/: add-p2.sh  add-pareto.sh  all-baselines-2.sh  all-baselines.sh  arith-cross-pareto.sh  arith_baseline.sh  bnp.sh  bool-no-paren.sh  bool-prec.sh  bool-prec2.sh  bool_cd.sh  bp.sh  prom.sh  prom2.sh  prom3.sh
identifiability_toy_study/common/: batched_eval.py  causal.py  circuit.py  helpers.py  logic_gates.py  neural_model.py  schemas.py  subcircuit.py  utils.py
identifiability_toy_study/mi_identifiability/: LICENSE  circuit.py  grounding.py  logic_gates.py  main.py  mappings.py  neural_model.py  utils.py
identifiability_toy_study/persistence/: README.md  __init__.py  load.py  save.py
identifiability_toy_study/spd/: CLAUDE.md  LICENSE  Makefile  README.md  configs.py  data.py  eval.py  interfaces.py  log.py  losses.py  plotting.py  registry.py  run_spd.py  settings.py  spd_types.py
identifiability_toy_study/spd/models/: component_model.py  components.py  sigmoids.py
identifiability_toy_study/spd/scripts/: __init__.py  run.py  sweep_params.yaml.example
identifiability_toy_study/spd/utils/: alive_components_tracker.py  component_utils.py  data_utils.py  distributed_utils.py  general_utils.py  git_utils.py  linear_sum_assignment.py  module_utils.py  (+4 more)
identifiability_toy_study/tests/: test_causal.py  test_circuit.py  test_grounding.py  test_helpers.py  test_logic_gates.py  test_neural_model.py  test_schemas.py  test_utils.py
mi_identifiability/: logic_gates.py  mappings.py
scripts/: benchmark_parallel.py  caffeinate_run.sh  find_unused.py  find_unused_full.py  sanity.py
src/: auto_export.py  experiment.py  experiment_config.py  parameter_decomposition.py  pipeline.py  schema_class.py  serialization.py  trial.py
src/activation_analysis/: __init__.py  clustering.py  statistics.py  types.py
src/analysis/: __init__.py  counterfactual.py  faithfulness.py  filtering.py  interventional.py  observational.py  perturbations.py  robustness.py  slices.py  structural_faithfulness.py  subcircuit_ranking.py
src/attribution/: __init__.py  eap.py  eap_ig.py  input_attribution.py  patching.py  types.py
src/causal/: __init__.py  counterfactual.py  data_generation.py  filtering.py  interventional.py  metrics.py  observational.py  scoring.py
src/circuit/: __init__.py  batched_eval.py  circuit.py  enumeration.py  grounding.py  precompute.py
src/common/: batched_eval.py  circuit.py  helpers.py  metrics.py  neural_model.py  parallelization.py  profiler.py  schemas.py  subcircuit.py
src/domain/: __init__.py  logic_gates.py
src/geometric/: __init__.py  cka.py  rsa.py  types.py
src/infra/: __init__.py  logging.py  parallel.py  profiler.py  status.py  utils.py
src/math/: __init__.py  similarity.py
src/model/: __init__.py  decomposed_mlp.py  intervention.py  mlp.py
src/persistence/: README.md  __init__.py  load.py  save.py  summary.py
src/probing/: __init__.py  analysis.py  linear_probe.py  types.py
src/schemas/: __init__.py  config.py  evaluation.py  faithfulness.py  results.py  samples.py  schema_class.py  structural.py  visualization.py
src/spd/: __init__.py  analysis.py  clustering.py  config.py  decomposition.py  evaluation.py  importance.py  persistence.py  runner.py  schemas.py  spd_executor.py  spd_experiment.py  spd_trial.py  spd_types.py  trial_on_spd.py  types.py  validation.py  visualization.py
src/spd_internal/: __init__.py  analysis.py  cluster_analysis.py  clustering.py  config.py  decomposition.py  importance.py  persistence.py  subcircuits.py  validation.py  visualization.py
src/tensor_ops/: __init__.py  similarity.py
src/training/: __init__.py  data_gen.py  orchestrator.py  train_loop.py
src/training_analysis/: __init__.py  epiplexity.py  types.py
src/trial/: __init__.py  gate_analysis.py  phases.py  runner.py  trial_executor.py
src/visualization/: __init__.py  decision_boundary.py
src/viz/: __init__.py  activation_viz.py  circuit_drawing.py  constants.py  experiment_viz.py  export.py  faithfulness_viz.py  main.py  metrics_export.py  observational_viz.py  profiling_viz.py  slice_viz.py  spd_viz.py  viz_config.py
tests/: test_batch_sequential_equivalence.py  test_batched_eval.py  test_causal_analysis.py  test_node_masks.py
xor_data/: xor_mlp.pt
(+64 files in other folders)
