[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "identifiability-toy-study"
version = "1.0.1"
description = "Research extensions combining MI-identifiability (Méloux), spd (Goodfire-AI), circuit-stability (Alan Sun), and eap-ig-faithfulness (Hannah W.)."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ian Rios-Sialer", email = "ian@unrulyabstractions.com"}
]
requires-python = ">=3.9"
keywords = ["machine-learning", "interpretability", "circuit-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core dependencies for mi_identifiability
    "tqdm~=4.66.5",
    "matplotlib~=3.8.3",
    "numpy~=1.26.4",
    "scipy~=1.12.0",
    "pandas~=2.2.1",
    "torch~=2.4.1",
    "networkx~=3.2.1",
    "torchvision~=0.19.1",
    # Additional dependencies for spd module
    "pydantic>=2.0.0",
    "datasets",
    "transformers",
    "wandb",
    "einops",
    "jaxtyping",
    # Additional dependencies for other modules
    "plotly",
    "scikit-learn",
    "seaborn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
    "ruff",
    "jupyterlab",
    "ipykernel",
    "nbstripout",
    "ipywidgets",
]

[project.urls]
"Homepage" = "https://github.com/unrulyabstractions/identifiability-toy-study"
"Bug Reports" = "https://github.com/unrulyabstractions/identifiability-toy-study/issues"
"Source" = "https://github.com/unrulyabstractions/identifiability-toy-study"

[tool.setuptools.packages.find]
where = ["."]
include = ["identifiability_toy_study*"]

[tool.ruff]
line-length = 88
target-version = "py39"
extend-exclude = ["build",".venv","venv","dist"]

[tool.ruff.lint]
select = ["E","F","I","B","UP","C4","SIM","RUF"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "ruff>=0.12.12",
]
