[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "identifiability-toy-study"
version = "1.0.1"
description = "Research extensions combining MI-identifiability (Méloux), spd (Goodfire-AI), circuit-stability (Alan Sun), eap-ig-faithfulness (Hannah W.), and SubspacePartition (Huang et al.)."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ian Rios-Sialer", email = "ian@unrulyabstractions.com"}
]
requires-python = ">=3.13"
keywords = ["machine-learning", "interpretability", "circuit-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Core dependencies for mi_identifiability
    "tqdm>=4.66.5",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "scipy>=1.14.1",
    "pandas>=2.2.1",
    "torch>=2.6",
    "networkx~=3.2.1",
    "torchvision>=0.23,<0.24",
    # Additional dependencies for spd module
    "pydantic>=2.0.0",
    "datasets",
    "transformers",
    "wandb",
    "einops",
    "jaxtyping",
    # Additional dependencies for other modules
    "plotly",
    "scikit-learn",
    "seaborn",
    # Additional dependencies for SubspacePartition module
    "transformer-lens",
    "easydict",
    "faiss-cpu",
    "streamlit",
    # SPD package (local submodule)
    "spd",
]

[tool.uv.sources]
spd = { path = "submodules/spd", editable = true }

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "ruff",
    "jupyterlab",
    "ipykernel",
    "nbstripout",
    "ipywidgets",
]

[project.urls]
"Homepage" = "https://github.com/unrulyabstractions/identifiability-toy-study"
"Bug Reports" = "https://github.com/unrulyabstractions/identifiability-toy-study/issues"
"Source" = "https://github.com/unrulyabstractions/identifiability-toy-study"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 88
target-version = "py39"
extend-exclude = ["build",".venv","venv","dist"]

[tool.ruff.lint]
select = ["E","F","I","B","UP","C4","SIM","RUF"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "ruff>=0.12.12",
]
